# personal-website

./: .cruft.json  .env.example  .gitignore  AGENTS.md  Makefile  Procfile  README.md  pyproject.toml  scratch.py
.github/workflows/: ci.yml  deploy-railway.yml
agent_instructions/: deployment_options.md
personal_website/: __init__.py  config.py  dashboard.py  logger.py
personal_website/portfolio/: __init__.py  app.py  commands.py  guards.py  llm.py
personal_website/portfolio/static/css/: style.css
personal_website/portfolio/static/files/: knowledge_base.txt
personal_website/portfolio/static/js/: ambient.js  summary.js  terminal.js
personal_website/portfolio/templates/: base.html  index.html  summary.html
tests/: __init__.py  test_config.py  test_imports.py  test_package.py
tests/portfolio/: __init__.py  test_app.py  test_llm.py  test_spend_cap.py
